Trying to fix HTTPS issue, attempt 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="gcleaner, system cleaner, gnu cleaner, linux cleaner, linux system cleaner, gnu/linux cleaner, python cleaner, gtk linux cleaner, linux cache cleaner, linux temp cleaner, temporary files cleaner, cleaner, free software linux cleaner">
         <meta name="Robots" content="all">
         <meta name="googlebot" content="index, follow">
-        <meta name="copyright" content="URL_WEB"><!-- FILL THIS AFTER FINISH PAGE-->
+        <meta name="copyright" content="https://gcleaner.github.io/">
         <meta name="distribution" content="global">
         <meta name="author" content="Juan Pablo Lozano <gcleaner.adm@gmail.com>">
         <meta profile="http://www.w3.org/2005/10/profile">
@@ -19,7 +19,6 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
