--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="gcleaner, system cleaner, gnu cleaner, linux cleaner, linux system cleaner, gnu/linux cleaner, python cleaner, gtk linux cleaner, linux cache cleaner, linux temp cleaner, temporary files cleaner, cleaner, free software linux cleaner">
         <meta name="Robots" content="all">
         <meta name="googlebot" content="index, follow">
-        <meta name="copyright" content="https://gcleaner.github.io/">
+        <meta name="copyright" content="gcleaner.github.io">
         <meta name="distribution" content="global">
         <meta name="author" content="Juan Pablo Lozano <gcleaner.adm@gmail.com>">
         <meta profile="http://www.w3.org/2005/10/profile">
