Finish index, Get Involved 70%

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>GCleaner</title>
+        <title>GCleaner - About</title>
         <meta name="description" content="A System Cleaner For GNU/Linux">
         <meta name="keywords" content="gcleaner, system cleaner, gnu cleaner, linux cleaner, linux system cleaner, gnu/linux cleaner, python cleaner, gtk linux cleaner, linux cache cleaner, linux temp cleaner, temporary files cleaner, cleaner, free software linux cleaner">
         <meta name="Robots" content="all">
@@ -26,17 +26,17 @@
         <!--HEADER DESKTOP-->
         <div id="header-gc" class="container-fluid visible-sm visible-md visible-lg">
           <center><ul id="nav-gc" class="nav nav-tabs nav-justified">
-            <li><a class="activo" href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/get_involved">Get Involved</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a class="activo" href="/about">About</a></li>
             <li><a href="/contact_us">Contact Us</a></li>
           </ul></center>
           <br>
           <center>
               <br>
-              <h1 class="title-header">GCleaner</h1>
-              <h3 class="title-desc">A System Cleaner For GNU/Linux</h3>
-              <img src="img/gc-screenshot.png" alt="screenshot" style="width: 100%; margin-top: 8%;">
+              <h1 class="title-header">Soon</h1>
+              <h3 class="title-desc">Work in progress!</h3>
+              <img src="img/fill.png" alt="fill" style="width: 100%; height: 2px; margin-top: 8%;">
           </center>
         </div>
 
@@ -56,9 +56,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li class="active"><a id="activo" href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/get_involved">Get Involved</a></li>
-                <li><a href="/about">About</a></li>
+                <li class="active"><a id="activo" href="/about">About</a></li>
                 <li><a href="/contact_us">Contact Us</a></li>
               </ul>
             </div>
@@ -97,124 +97,6 @@
             <br><br>
         </center>
 
-        <!-- DESKTOP VERSION -->
-        <div id="characteristics" class="container-fluid visible-sm visible-md visible-lg" style="margin-left: 0px; margin-right: 0px;">
-          <div class="characteristics-container col-sm-4" style="border-color: #55beff; margin-left: -12px;">
-            <center>
-              <img src="img/granite.svg" class="char-img" alt=""/>
-              <h2>GTK+</h2>
-              <p>
-                GCleaner handles the latest technologies such as GTK+ 3.0 toolkit
-                to provide a clean and innovative user interface.
-              </p>
-            </center>
-          </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #7945fc;">
-            <center>
-              <img src="img/vala.png" class="char-img" alt=""/>
-              <h2>Vala</h2>
-              <p>
-                Vala programming language that is so lightweight has been stimulated by 
-                Elemenary OS and GNOME to gives GCleaner an incredible speed.
-              </p>
-            </center>
-          </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px; margin-right: -12px;">
-            <center>
-              <img src="img/python.png" class="char-img" alt=""/>
-              <h2>Python 3</h2>
-              <p>
-               Python 3 programming language has gained its place to promote variety 
-               within the development of GCleaner and include amazing features that
-               only python can reach.
-              </p>
-            </center>
-          </div>
-        </div>
-        
-        <!-- MOBILE VERSION -->
-        <div id="characteristics" class="container-fluid visible-xs" style="margin-left: 0px; margin-right: 0px;">
-          <div class="characteristics-container col-sm-4" style="border-color: #55beff;">
-            <center>
-              <img src="img/granite.svg" class="char-img" alt=""/>
-              <h2>GTK+</h2>
-              <p>
-                GCleaner handles the latest technologies such as GTK+ 3.0 toolkit
-                to provide a clean and innovative user interface.
-              </p>
-            </center>
-          </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #7945fc;">
-            <center>
-              <img src="img/vala.png" class="char-img" alt=""/>
-              <h2>Vala</h2>
-              <p>
-                Vala programming language that is so lightweight has been stimulated by 
-                Elemenary OS and GNOME to gives GCleaner an incredible speed.
-              </p>
-            </center>
-          </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px;">
-            <center>
-              <img src="img/python.png" class="char-img" alt=""/>
-              <h2>Python 3</h2>
-              <p>
-               Python 3 programming language has gained its place to promote variety 
-               within the development of GCleaner and include amazing features that
-               only python can reach.
-              </p>
-            </center>
-          </div>
-        </div>
-
-        <br>
-        <br>
-
-        <!--Description DESKTOP Mode-->
-        <div id="gc-desc" class="container-fluid">
-          <div class="col-sm-8">
-            <img src="img/headerandtoolbar.png" class="img-responsive visible-sm visible-md visible-lg" alt=""/>
-            <img src="img/headerandtoolbar-mobile.png" class="img-responsive visible-xs" alt=""/>
-          </div>
-          <div class="col-sm-4">
-            <center>
-              <h2>Adaptable</h2>
-              <p>
-                GCleaner may only be a little program, but with their ability to adapt it 
-                to any desktop and ability to analyze different areas of the system make it a powerful tool
-              </p>
-            </center>
-          </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div id="gc-desc" class="container-fluid">
-          <div class="col-sm-8 visible-xs">
-            <img src="img/gc-mobile-preview.png" class="img-responsive" alt=""/>
-          </div>
-          <div class="col-sm-4">
-            <center>
-              <h2>Simply Beautiful</h2>
-              <p>
-                GCleaner is carefully crafted by skilled designers and coders, right down to the last pixel.
-              </p>
-            </center>
-          </div>
-          <div class="col-sm-8 visible-sm visible-md visible-lg">
-            <img src="img/gc-desktop-preview.png" class="img-responsive" alt=""/>
-          </div>
-        </div>
-        <br><br>
-        <div class="container-fluid">
-          <div class="col-sm-9">
-
-          </div>
-          <div class="col-sm-3">
-
-          </div>
-        </div>
 
         <!--FOOTER DESKTOP-->
         <div id="gc-footer" class="container-fluid">
