Finish Involved, About 70%

--- a/get_involved.html
+++ b/get_involved.html
@@ -25,7 +25,7 @@
     <body style="background-color: #F5F5F5;">
         <!--HEADER DESKTOP-->
         <div id="header-involved" class="container-fluid visible-sm visible-md visible-lg">
-          <center><ul id="nav-gc" class="nav nav-tabs nav-justified">
+          <center><ul id="nav-gc" class="nav nav-tabs nav-justified nav-involved">
             <li><a href="/">Home</a></li>
             <li><a class="activo" href="/get_involved">Get Involved</a></li>
             <li><a href="/about">About</a></li>
@@ -73,20 +73,20 @@
           <div id="main-description" class="container-fluid">
             <br>
             <br>
-            <h1>Diversity &amp; Variety</h1>
+            <h1 class="visible-sm visible-md visible-lg"><i class="fas fa-code"></i>  Diversity Across Code</h1>
+            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="fas fa-code"></i>  Diversity Across Code</h1>
             <p id="text-justified">
-               GCleaner has two version. In the beginin of project the first version was writen in Vala.
-               Then, for some reason and porpouses GCleaner was rewriten in Python 3, bringin to the possibilities
-               to include new features and awesome characteristics and get other type of talents to the project. And
-                bla bla bla.
+               GCleaner arrives in two different versions: at the beginning of the project, the first version began to be written in 
+               Vala. Then for several reasons and purposes, GCleaner started with a second version written in Python 3, offering the 
+               possibility to include new and amazing features and attract a new audience of talented developers to the project.
+               Producing great variety and diversity through the code.
             </p> 
           </div>
             <br><br>
+            <a class="button-vala" href="https://launchpad.net/gcleaner" target="_blank"><img src="img/launchpad.svg" alt="Launchpad.net" class="launchpad-icon" width="86px">Vala Version</a>
             <a class="button-github" href="https://github.com/gcleaner/gcleaner-python" target="_blank">Python 3 Version</a>
             <br><br>
         </center>
-
-        
 
         <!--FOOTER DESKTOP-->
         <div id="gc-footer" class="container-fluid">
