--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
     </head>
     <body style="background-color: #F5F5F5;">
         <!--HEADER DESKTOP-->
-        <div id="header-gc" class="container-fluid visible-sm visible-md visible-lg">
-          <center><ul id="nav-gc" class="nav nav-tabs nav-justified">
+        <div id="header-about" class="container-fluid visible-sm visible-md visible-lg">
+          <center><ul id="nav-gc" class="nav nav-tabs nav-justified nav-involved">
             <li><a href="/">Home</a></li>
             <li><a href="/get_involved">Get Involved</a></li>
             <li><a class="activo" href="/about">About</a></li>
@@ -34,27 +34,30 @@
           <br>
           <center>
               <br>
-              <h1 class="title-header">Soon</h1>
-              <h3 class="title-desc">Work in progress!</h3>
+              <h1 class="title-header">About GCleaner</h1>
+              <h3 class="title-desc">Know more about the development team behind the curtain</h3>
               <img src="img/fill.png" alt="fill" style="width: 100%; height: 2px; margin-top: 8%;">
           </center>
         </div>
 
         <!--MOBILE MENU-->
-        <nav class="navbar navbar-inverse visible-xs">
+        <nav class="navbar navbar-inverse navbar-about visible-xs">
           <div class="container-fluid">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbarAbout">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
               </button>
               <ul class="mobile-header">
                 <li><img src="img/mobile-icon.png" class="mobile-icon" alt=""/></li>
-                <li><a class="navbar-brand" id="mobile-title" href="/">GCleaner</a></li>
+                <li><a class="navbar-brand" id="mobile-title" href="/" style="color: #ffbf2a!important; width: 200px;">About</a></li>
               </ul>
+              <h1 class="title-about">About GCleaner</h1>
+              <p class="titlep-about">Know more about the development team behind the curtain.</p>
+              <hr class="visible-xs line-dl">
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="collapse navbar-collapse" id="myNavbarAbout">
               <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/get_involved">Get Involved</a></li>
@@ -64,37 +67,26 @@
             </div>
           </div>
         </nav>
-        <br class="visible-xs">
-        <hr class="visible-xs line-dl">
-
-        <!--<center>
-            <button class="button-dl">
-                <span>
-                    <a href="#DownloadDEB" style="text-decoration: none;color: #fff;"><img src="img/downloadicon.png">Download</a>
-                </span>
-            </button>
-        </center>-->
 
         <center>
           <div id="main-description" class="container-fluid">
             <br>
             <br>
-            <h1>Open Source, Light and Dynamic</h1>
+            <h1 class="visible-sm visible-md visible-lg"><i class="fas fa-users"></i>  Know The Team</h1>
+            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="fas fa-users"></i>  Know The Team</h1>
             <p id="text-justified">
-               GCleaner Allows to keep clean your GNU/Linux system easily. Is so light and aerodynamically
-               simple as a feather. Its source code is freely available for anyone to download and modify,
-               leading to active development and a diverse feature set. There are currently two versions of
-               GCleaner alive, one written in Vala and the other in Python, allowing any type of developer
-               to participate in the project. Help us to make this project a reality.
             </p> 
           </div>
-            <br><br>
-          <button class="button-involved">
-                <span>
-                    <a href="/get_involved" style="text-decoration: none;color: #fff;"><i class="fas fa-hands-helping"></i>  Get Involved</a>
-                </span>
-            </button>
-            <br><br>
+          <div class="col-sm-6 profile">
+                    <img src="img/juan.png" alt="Juan Pablo Lozano" class="img-circle avatar" width="128">
+                    <h2 class="juan-fnt">Juan Pablo Lozano</h2>
+                    <p>
+                        Desarrollador Web, Python, Vala
+                    </p>
+                    <p>
+                        Administrador
+                    </p>
+                </div>
         </center>
 
 
