All Finished... for now!

--- a/about.html
+++ b/about.html
@@ -77,16 +77,36 @@
             <p id="text-justified">
             </p> 
           </div>
-          <div class="col-sm-6 profile">
+           <div class="col-sm-4 profile">
                     <img src="img/juan.png" alt="Juan Pablo Lozano" class="img-circle avatar" width="128">
-                    <h2 class="juan-fnt">Juan Pablo Lozano</h2>
+                    <h2>Juan Pablo Lozano</h2>
                     <p>
                         Desarrollador Web, Python, Vala
                     </p>
                     <p>
                         Administrador
                     </p>
-                </div>
+           </div>
+           <div class="col-sm-4 profile">
+                    <img src="img/ivan.msuar.png" alt="Ivan Matias Suarez" class="img-circle avatar" width="128">
+                    <h2>Ivan Matias Suarez</h2>
+                    <p>
+                        Diseñador Grafico, UX
+                    </p>
+                    <p>
+                        Colaborador
+                    </p>
+           </div>
+           <div class="col-sm-4 profile">
+                    <img src="img/mariano.lorelli.png" alt="Mariano Lorelli" class="img-circle avatar" width="128">
+                    <h2>Mariano Lorelli</h2>
+                    <p>
+                        Desarrollador Vala
+                    </p>
+                    <p>
+                        Colaborador
+                    </p>
+           </div>
         </center>
 
 
