--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
             </div>
           </div>
         </nav>
-        <br class="visible-xs">
-        <hr class="visible-xs line-dl">
 
         <!--<center>
             <button class="button-dl">
@@ -79,7 +77,8 @@
           <div id="main-description" class="container-fluid">
             <br>
             <br>
-            <h1>Open Source, Light and Dynamic</h1>
+            <h1 class="visible-sm visible-md visible-lg">Open Source, Light and Dynamic</h1>
+            <h1 class="visible-xs" style="margin-top: -30px;">Open Source, Light and Dynamic</h1>
             <p id="text-justified">
                GCleaner Allows to keep clean your GNU/Linux system easily. Is so light and aerodynamically
                simple as a feather. Its source code is freely available for anyone to download and modify,
