--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         
         <!-- MOBILE VERSION -->
         <div id="characteristics" class="container-fluid visible-xs" style="margin-left: 0px; margin-right: 0px;">
-          <div class="characteristics-container col-sm-4" style="border-color: #55beff;">
+          <div class="characteristics-container col-sm-4" style="border-color: #55beff; height: 350px!important;">
             <center>
               <img src="img/granite.svg" class="char-img" alt=""/>
               <h2>GTK+</h2>
@@ -143,7 +143,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #7945fc;">
+          <div class="characteristics-container col-sm-4" style="border-color: #7945fc; height: 350px!important;">
             <center>
               <img src="img/vala.png" class="char-img" alt=""/>
               <h2>Vala</h2>
@@ -153,7 +153,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px;">
+          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px; height: 350px!important;">
             <center>
               <img src="img/python.png" class="char-img" alt=""/>
               <h2>Python 3</h2>
