--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <!-- DESKTOP VERSION -->
         <div id="characteristics" class="container-fluid visible-sm visible-md visible-lg" style="margin-left: 0px; margin-right: 0px;">
-          <div class="characteristics-container col-sm-4" style="border-color: #55beff; margin-left: -12px;">
+          <div class="characteristics-container col-sm-4" style="border-color: #55beff; margin-left: -12px; height: 70vh;">
             <center>
               <img src="img/granite.svg" class="char-img" alt=""/>
               <h2>GTK+</h2>
@@ -108,7 +108,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #7945fc;">
+          <div class="characteristics-container col-sm-4" style="border-color: #7945fc; height: 70vh;">
             <center>
               <img src="img/vala.png" class="char-img" alt=""/>
               <h2>Vala</h2>
@@ -118,7 +118,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px; margin-right: -12px;">
+          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px; margin-right: -12px;  height: 70vh;">
             <center>
               <img src="img/python.png" class="char-img" alt=""/>
               <h2>Python 3</h2>
@@ -133,7 +133,7 @@
         
         <!-- MOBILE VERSION -->
         <div id="characteristics" class="container-fluid visible-xs" style="margin-left: 0px; margin-right: 0px;">
-          <div class="characteristics-container col-sm-4" style="border-color: #55beff; height: 350px!important;">
+          <div class="characteristics-container col-sm-4" style="border-color: #55beff;">
             <center>
               <img src="img/granite.svg" class="char-img" alt=""/>
               <h2>GTK+</h2>
@@ -143,7 +143,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #7945fc; height: 350px!important;">
+          <div class="characteristics-container col-sm-4" style="border-color: #7945fc; height: 350px;">
             <center>
               <img src="img/vala.png" class="char-img" alt=""/>
               <h2>Vala</h2>
@@ -153,7 +153,7 @@
               </p>
             </center>
           </div>
-          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px; height: 350px!important;">
+          <div class="characteristics-container col-sm-4" style="border-color: #f8c63d; padding-bottom: 30px;">
             <center>
               <img src="img/python.png" class="char-img" alt=""/>
               <h2>Python 3</h2>
