Add Donate Button and fix some issues

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
               <p>
                 GCleaner is carefully crafted by skilled designers and coders, right down to the last pixel.
               </p>
+              <br><br>
+              <h2 style="font-size: 26px;">¿Do you want to donate?</h2>
+              <a mp-mode="dftl" href="https://www.mercadopago.com/mla/checkout/start?pref_id=427544815-24096c62-f258-445c-b6c4-28bb1ebb90f5" name="MP-payButton" class='blue-ar-l-rn-none'><img src="img/mercadopago.png" width="160px"></a>
+<script type="text/javascript">
+(function(){function $MPC_load(){window.$MPC_loaded !== true && (function(){var s = document.createElement("script");s.type = "text/javascript";s.async = true;s.src = document.location.protocol+"//secure.mlstatic.com/mptools/render.js";var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);window.$MPC_loaded = true;})();}window.$MPC_loaded !== true ? (window.attachEvent ?window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null;})();
+</script>
             </center>
           </div>
           <div class="col-sm-8 visible-sm visible-md visible-lg">
