--- a/payment_inprocess.html
+++ b/payment_inprocess.html
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-inverse navbar-paymentproc visible-xs">
           <div class="container-fluid">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbarPaymentOK">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbarPaymentPROC">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
@@ -57,7 +57,7 @@
               <p class="titlep-paymentok">Your payment is being processed, it will be over soon!</p>
               <hr class="visible-xs line-dl">
             </div>
-            <div class="collapse navbar-collapse" id="myNavbarPaymentOK">
+            <div class="collapse navbar-collapse" id="myNavbarPaymentPROC">
               <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/get_involved">Get Involved</a></li>
