Fix come back button in payment pages

--- a/payment_ok.html
+++ b/payment_ok.html
@@ -83,7 +83,7 @@
             <br><br>
             <button class="button-involved">
                 <span>
-                    <a href="/get_involved" style="text-decoration: none;color: #fff;"><i class="fas fa-angle-double-left"></i>  Come back</a>
+                    <a href="/" style="text-decoration: none;color: #fff;"><i class="fas fa-angle-double-left"></i>  Come back</a>
                 </span>
             </button>
             <br><br><br><br>
