Improove Icon of Payments pages

--- a/payment_inprocess.html
+++ b/payment_inprocess.html
@@ -72,7 +72,7 @@
           <div id="main-description" class="container-fluid">
             <br>
             <br>
-            <h1 class="visible-sm visible-md visible-lg"><i class="fas fa-project-diagram"></i>  Continue Discovering The Website</h1>
+            <h1 class="visible-sm visible-md visible-lg"><i class="far fa-window-restore"></i>  Continue Discovering The Website</h1>
             <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="fas fa-project-diagram"></i>  Continue Discovering The Website</h1>
             <p id="text-justified" class="visible-sm visible-md visible-lg" style="margin-left: 14%; margin-right: 14%; text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p>
             <p id="text-justified" class="visible-xs" style="text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p> 
