Fix Colors in payment_ok page and icons

--- a/payment_inprocess.html
+++ b/payment_inprocess.html
@@ -54,7 +54,7 @@
                 <li><a class="navbar-brand" id="mobile-title" href="/" style="color: #fff!important; width: 200px;">Payment</a></li>
               </ul>
               <h1 class="title-involved">Payment In Process...</h1>
-              <p class="titlep-paymentok">Your payment is being processed, it will be over soon!</p>
+              <p class="titlep-paymentproc">Your payment is being processed, it will be over soon!</p>
               <hr class="visible-xs line-dl">
             </div>
             <div class="collapse navbar-collapse" id="myNavbarPaymentPROC">
@@ -73,7 +73,7 @@
             <br>
             <br>
             <h1 class="visible-sm visible-md visible-lg"><i class="far fa-window-restore"></i>  Continue Discovering The Website</h1>
-            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="fas fa-project-diagram"></i>  Continue Discovering The Website</h1>
+            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="far fa-window-restore"></i>  Continue Discovering The Website</h1>
             <p id="text-justified" class="visible-sm visible-md visible-lg" style="margin-left: 14%; margin-right: 14%; text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p>
             <p id="text-justified" class="visible-xs" style="text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p> 
           </div>
