--- a/payment_ok.html
+++ b/payment_ok.html
@@ -46,16 +46,16 @@
         <nav class="navbar navbar-inverse navbar-paymentok visible-xs">
           <div class="container-fluid">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbarPaymentOK">
+              <button type="button" id="toggle-paymentok" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbarPaymentOK">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
               </button>
               <ul class="mobile-header">
                 <li><img src="img/mobile-icon.png" class="mobile-icon" alt=""/></li>
-                <li><a class="navbar-brand" id="mobile-title" href="/" style="color: #fff!important; width: 200px;">Payment</a></li>
+                <li><a class="navbar-brand" id="mobile-title" href="/" style="color: #000!important; width: 200px;">Payment</a></li>
               </ul>
-              <h1 class="title-involved">Successful Payment!</h1>
+              <h1 class="title-paymentok">Successful Payment!</h1>
               <p class="titlep-paymentok">Your payment has been successful, We greatly appreciate your support
                 for the project... we count on you!</p>
               <hr class="visible-xs line-dl">
@@ -76,7 +76,7 @@
             <br>
             <br>
             <h1 class="visible-sm visible-md visible-lg"><i class="far fa-window-restore"></i>  Continue Discovering The Website</h1>
-            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="fas fa-project-diagram"></i>  Continue Discovering The Website</h1>
+            <h1 class="visible-xs" style="font: 200 2em/1 'Open Sans';"><i class="far fa-window-restore"></i>  Continue Discovering The Website</h1>
             <p id="text-justified" class="visible-sm visible-md visible-lg" style="margin-left: 14%; margin-right: 14%; text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p>
             <p id="text-justified" class="visible-xs" style="text-align: justify;">We already appreciate your collaboration in the project. Your contribution will be used to improve the product, add new features, solve possible problems... we simply want to keep the project alive. Thanks to you we make the difference!</p> 
           </div>
