Fix color in menu of Payment_InProcess page

--- a/payment_inprocess.html
+++ b/payment_inprocess.html
@@ -25,7 +25,7 @@
     <body style="background-color: #F5F5F5;">
         <!--HEADER DESKTOP-->
         <div id="header-paymentproc" class="container-fluid visible-sm visible-md visible-lg">
-          <center><ul id="nav-gc" class="nav nav-tabs nav-justified nav-paymentok">
+          <center><ul id="nav-gc" class="nav nav-tabs nav-justified nav-paymentproc">
             <li><a href="/">Home</a></li>
             <li><a href="/get_involved">Get Involved</a></li>
             <li><a href="/about">About</a></li>
